@@ -14,8 +14,7 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
@@ -41,6 +40,9 @@ class VehiculeServiceTest {
 
         when(vehiculeRepo.findByStatut(any()))
                 .thenReturn(List.of(v1));
+
+        when(mapper.toResponseDtoList(anyList()))
+                .thenReturn(List.of(new VehiculeResponseDTO()));
         //2. act
         List<VehiculeResponseDTO> result = vehiculeService.listeVehiculesDisponibles();
 
@@ -52,23 +54,28 @@ class VehiculeServiceTest {
 
     @Test
     void findCapaciteVehiculeGreaterThan(){
-        int capaciteMin = 10;
 
+        int capaciteMin = 10;
 
         Vehicule v1 = new Vehicule();
         v1.setCapacite(15);
 
-        Vehicule v2 = new Vehicule();
-        v2.setCapacite(5);
+        VehiculeResponseDTO dto = new VehiculeResponseDTO();
+        dto.setCapacite(15);
 
-
-        when(vehiculeRepo.findByCapaciteGreaterThan(anyInt()))
+        when(vehiculeRepo.findByCapaciteGreaterThan(10))
                 .thenReturn(List.of(v1));
-        List<VehiculeResponseDTO> result = vehiculeService.findCapaciteVehiculeGreaterThan(capaciteMin);
+
+        when(mapper.toResponseDtoList(List.of(v1)))
+                .thenReturn(List.of(dto));
+
+        List<VehiculeResponseDTO> result =
+                vehiculeService.findCapaciteVehiculeGreaterThan(capaciteMin);
 
         assertNotNull(result);
-        assertEquals(1,result.size(), "la liste doit contenir un seul élément");
-        assertTrue(result.getFirst().getCapacite()>capaciteMin, "capacité doit être > 10");
+        assertEquals(1, result.size());
+
+        assertTrue(result.get(0).getCapacite() > capaciteMin);
     }
 
 
